kubernetes/apps/base/security/onepassword/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: onepassword
spec:
  hostnames:
    - ${SUBDOMAIN}${SUBDOMAIN_SUFFIX:=}.${CLUSTER_DOMAIN}
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: envoy-internal
      namespace: network
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: onepassword
          namespace: security
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
